--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
     "pretender": "~0.10.1",
     "lodash": "~3.7.0",
     "Faker": "~3.0.0",
-    "dragula": "^3.5.4"
+    "dragula": "^3.5.4",
+    "fastclick": "^1.0.6",
+    "font-awesome": "fontawesome#^4.6.1"
   }
 }
