--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gains",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Small description for gains goes here",
   "private": true,
   "directories": {
@@ -20,32 +20,34 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.3",
-    "broccoli-asset-rev": "^2.2.0",
+    "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "0.7.1",
-    "ember-cli": "^2.5.0",
+    "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
+    "ember-cli-babel": "^5.1.6",
     "ember-cli-css-preprocess": "0.0.8",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-jshint": "^1.0.0",
+    "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.5.2",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-dragula": "1.9.3",
-    "ember-export-application-global": "^1.0.4",
-    "ember-load-initializers": "^0.5.0",
+    "ember-cp-validations": "2.9.0",
+    "ember-data": "^2.5.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "^1.1.0",
     "ember-simple-auth-token": "^1.1.1",
-    "loader.js": "^4.0.0",
+    "loader.js": "^4.0.1",
     "lost": "^6.7.2",
     "phantomjs": "^2.1.7",
     "rucksack-css": "^0.8.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ember-clndr": "0.0.3"
+  }
 }
